fix #paintings image shadow effect - removed extra padding that appears on it

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -135,8 +135,6 @@
 }
 #paintings figure img {
   max-width: 100%;
-  margin-bottom: 1rem;
-  padding-top: 1rem;
   box-shadow: -1px -1px 1px 0 black, 4px 6px 12px 6px black;
 }
 #paintings figure img .paysage {
